Fix Docker Compose compatibility and port conflicts
- Remove obsolete 'version' attribute from docker-compose.yml
- Fix node-exporter mount issue by using compatible volume mounts
- Update .env.example with non-conflicting ports (9188, 9091, 3004, 9101)
- Improve node-exporter configuration for better compatibility
- Resolve 'not a shared or slave mount' error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Exporter
   postgres-exporter:
@@ -22,7 +20,7 @@ services:
     ports:
       - "${NODE_EXPORTER_PORT:-9100}:9100"
     volumes:
-      - '/:/host:ro,rslave'
+      - '/:/host:ro'
     restart: always
     networks:
       - monitoring
