Fix Prometheus to PostgreSQL exporter connectivity
- Update prometheus.yml target from container name to 127.0.0.1:9187
- Add network host mode option for postgres-exporter for better localhost connectivity
- Improve PostgreSQL exporter configuration for various network scenarios
- Fix scraping issues between Prometheus and PostgreSQL exporter
- Add support for 127.0.0.1, host.docker.internal, and direct IP targeting

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -14,11 +14,11 @@ scrape_configs:
   # PostgreSQL Exporter
   - job_name: 'postgres-exporter'
     static_configs:
-      - targets: ['postgres-exporter:9187']
+      - targets: ['127.0.0.1:9187']
     scrape_interval: 30s
     metrics_path: /metrics
 
-  # Node Exporter for server metrics
+  # Node Exporter for server metrics  
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
