--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # PostgreSQL Connection Settings
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_password_here
-POSTGRES_HOST=host.docker.internal
-POSTGRES_PORT=5445
-POSTGRES_DB=public
+#POSTGRES_USER=postgres
+#POSTGRES_PASSWORD=your_password_here
+#POSTGRES_HOST=host.docker.internal
+#POSTGRES_PORT=5445
+#POSTGRES_DB=public
 
 # Container Names
 POSTGRES_EXPORTER_CONTAINER_NAME=postgres-exporter
@@ -12,7 +12,7 @@ PROMETHEUS_CONTAINER_NAME=prometheus
 GRAFANA_CONTAINER_NAME=grafana
 
 # Port Mappings
-POSTGRES_EXPORTER_PORT=9187
+#POSTGRES_EXPORTER_PORT=9187
 NODE_EXPORTER_PORT=9100
 PROMETHEUS_PORT=9090
 GRAFANA_PORT=3000
