--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,6 +1,8 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
+  external_labels:
+    monitor: 'system-monitoring'
 
 rule_files:
   - "rules/*.yml"
@@ -10,19 +12,23 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+    scrape_interval: 15s
 
-  # PostgreSQL Exporter
-  - job_name: 'postgres-exporter'
-    static_configs:
-      - targets: ['postgres-exporter:9187']
-    scrape_interval: 30s
-    metrics_path: /metrics
+  # PostgreSQL Exporter - EXTERNAL (from main database compose)
+  # Uncomment and update IP if you want to monitor external postgres-exporter
+  # - job_name: 'postgres-exporter'
+  #   static_configs:
+  #     - targets: ['100.99.18.32:9187']  # Update with your server IP
+  #   scrape_interval: 30s
+  #   scrape_timeout: 10s
+  #   metrics_path: /metrics
 
   # Node Exporter for server metrics
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
     scrape_interval: 30s
+    scrape_timeout: 10s
     metrics_path: /metrics
 
 alerting:
