--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  # PostgreSQL Exporter - MOVED to main database compose
+  # PostgreSQL Exporter - COMMENTED (external)
   # postgres-exporter:
   #   image: prometheuscommunity/postgres-exporter:latest
   #   container_name: ${POSTGRES_EXPORTER_CONTAINER_NAME:-postgres-exporter}
@@ -20,24 +20,19 @@ services:
     image: prom/node-exporter:latest
     container_name: ${NODE_EXPORTER_CONTAINER_NAME:-node-exporter}
     command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
+      - '--path.rootfs=/host'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-      - '--web.listen-address=0.0.0.0:9100'
     ports:
       - "${NODE_EXPORTER_PORT:-9100}:9100"
     volumes:
-      - '/proc:/host/proc:ro'
-      - '/sys:/host/sys:ro'
-      - '/:/rootfs:ro'
+      - '/:/host:ro,rslave'
     restart: always
-    pid: host
 
-  # Prometheus
+  # Prometheus - UNRESTRICTED NETWORK ACCESS
   prometheus:
     image: prom/prometheus:latest
     container_name: ${PROMETHEUS_CONTAINER_NAME:-prometheus}
+    network_mode: host
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -45,34 +40,26 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
-      - '--web.listen-address=0.0.0.0:9090'
-    ports:
-      - "${PROMETHEUS_PORT:-9090}:9090"
+      - '--web.listen-address=0.0.0.0:9091'  # Custom port
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./prometheus/rules:/etc/prometheus/rules:ro
+      - ./prometheus:/etc/prometheus
       - prometheus_data:/prometheus
     restart: always
-    depends_on:
-      - node-exporter
 
   # Grafana
   grafana:
     image: grafana/grafana:latest
     container_name: ${GRAFANA_CONTAINER_NAME:-grafana}
     ports:
-      - "${GRAFANA_PORT:-3000}:3000"
+      - "${GRAFANA_PORT:-3004}:3000"
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning:ro
-      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin123}
     restart: always
-    depends_on:
-      - prometheus
 
 volumes:
   prometheus_data:
