--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -11,22 +11,21 @@ scrape_configs:
   # Prometheus itself
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['localhost:9091']  # Host network port
     scrape_interval: 15s
 
-  # PostgreSQL Exporter - EXTERNAL (from main database compose)
-  # Uncomment and update IP if you want to monitor external postgres-exporter
-  # - job_name: 'postgres-exporter'
-  #   static_configs:
-  #     - targets: ['100.99.18.32:9187']  # Update with your server IP
-  #   scrape_interval: 30s
-  #   scrape_timeout: 10s
-  #   metrics_path: /metrics
+  # PostgreSQL Exporter - NOW CAN ACCESS ANY IP/CONTAINER
+  - job_name: 'postgres-exporter'
+    static_configs:
+      - targets: ['localhost:9187']  # Via host network
+    scrape_interval: 30s
+    scrape_timeout: 10s
+    metrics_path: /metrics
 
-  # Node Exporter for server metrics
+  # Node Exporter - Via host network
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ['localhost:9100']  # Via host network
     scrape_interval: 30s
     scrape_timeout: 10s
     metrics_path: /metrics
