--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,5 @@
 services:
-  # PostgreSQL Exporter - COMMENTED (external)
-  # postgres-exporter:
-  #   image: prometheuscommunity/postgres-exporter:latest
-  #   container_name: ${POSTGRES_EXPORTER_CONTAINER_NAME:-postgres-exporter}
-  #   environment:
-  #     DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@host.docker.internal:${POSTGRES_PORT:-5445}/${POSTGRES_DB:-public}?sslmode=disable"
-  #     PG_EXPORTER_WEB_LISTEN_ADDRESS: "0.0.0.0:9187"
-  #   ports:
-  #     - "${POSTGRES_EXPORTER_PORT:-9187}:9187"
-  #   restart: always
-  #   healthcheck:
-  #     test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9187/metrics"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 3
-
-  # Node Exporter for server metrics
+  # Node Exporter for server metrics - FIXED MOUNT
   node-exporter:
     image: prom/node-exporter:latest
     container_name: ${NODE_EXPORTER_CONTAINER_NAME:-node-exporter}
@@ -25,8 +9,9 @@ services:
     ports:
       - "${NODE_EXPORTER_PORT:-9100}:9100"
     volumes:
-      - '/:/host:ro,rslave'
+      - '/:/host:ro'  # ✅ Remove rslave - simple ro mount
     restart: always
+    privileged: true  # ✅ Add privileged for system access
 
   # Prometheus - UNRESTRICTED NETWORK ACCESS
   prometheus:
@@ -40,7 +25,7 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
-      - '--web.listen-address=0.0.0.0:9091'  # Custom port
+      - '--web.listen-address=0.0.0.0:9091'
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus_data:/prometheus
