--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  # Node Exporter for server metrics - FIXED MOUNT
+  # Node Exporter for server metrics
   node-exporter:
     image: prom/node-exporter:latest
     container_name: ${NODE_EXPORTER_CONTAINER_NAME:-node-exporter}
@@ -9,15 +9,14 @@ services:
     ports:
       - "${NODE_EXPORTER_PORT:-9100}:9100"
     volumes:
-      - '/:/host:ro'  # ✅ Remove rslave - simple ro mount
+      - '/:/host:ro'
     restart: always
-    privileged: true  # ✅ Add privileged for system access
+    privileged: true
 
-  # Prometheus - UNRESTRICTED NETWORK ACCESS
+  # Prometheus - NORMAL CONTAINER MODE
   prometheus:
     image: prom/prometheus:latest
     container_name: ${PROMETHEUS_CONTAINER_NAME:-prometheus}
-    network_mode: host
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -25,13 +24,14 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
-      - '--web.listen-address=0.0.0.0:9091'
+    ports:
+      - "${PROMETHEUS_PORT:-9090}:9090"  # ✅ Back to normal port
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus_data:/prometheus
     restart: always
 
-  # Grafana
+  # Grafana - SIMPLE CONTAINER
   grafana:
     image: grafana/grafana:latest
     container_name: ${GRAFANA_CONTAINER_NAME:-grafana}
